Add link when uploading

--- a/uploader.html
+++ b/uploader.html
@@ -29,7 +29,7 @@
 				<form action="http://localhost:8080/upload" method="POST" enctype="multipart/form-data" target="formSending">
 					<input type="file" id="file-old" name="file" />
 					<label id="file-new" for="file-old">Choose a file</label>
-					<input type="submit" id="upload-old"/>
+					<input type="submit" id="upload-old" value="upload"/>
 					<label id="upload" for="upload-old">Upload</label>
 				</form>
 			</div>
